--- a/index.html
+++ b/index.html
@@ -11,48 +11,73 @@
   <div id="team-members">
     <h2>Team Members</h2>
 
-  
+
+
+
     <div class="member">
-      <img src="images/avatar.png">
+      <img src="images/medium_6353433.jpg">
       <div class="name">
-        Person A
+        Brendan Deere<br />
+        Free Running Technologies - 
       </div>
     </div>
 
     <div class="member">
-      <img src="images/avatar.png">
+      <img src="images/medium_coryalder_2x.jpg">
       <div class="name">
-        Person B
+        Cory Alder<br />
+        Davander Mobile Corp.
       </div>
     </div>
 
     <div class="member">
-      <img src="images/avatar.png">
+      <img src="images/medium_danny_mathews_2x.JPG">
       <div class="name">
-        Person C
+        Danny Mathews<br />
+        Head iOS Instructor, Vancouver
       </div>
     </div>
 
     <div class="member">
-      <img src="images/avatar.png">
+      <img src="images/medium_davidvandusen_2x.jpg">
       <div class="name">
-        Person D
+        David VanDusen<br />
+        Instructor
       </div>
     </div>
 
     <div class="member">
-      <img src="images/avatar.png">
+      <img src="images/medium_don.JPG">
       <div class="name">
-        Person E
+        Don Burks<br />
+        Head Instructor, Vancouver
       </div>
     </div>
 
     <div class="member">
-      <img src="images/avatar.png">
+      <img src="images/medium_khurram_virani_2x.jpg">
       <div class="name">
-        Person F
+       Khurram Virani<br />
+        Head of Education
       </div>
     </div>
+
+    <div class="member">
+      <img src="images/medium_monica_2x.jpg">
+      <div class="name">
+        Monica Olinescu<br />
+        Instructor, Vancouver
+      </div>
+    </div>
+
+    <div class="member">
+      <img src="images/medium_profile_square.png">
+      <div class="name">
+        James Sapara<br />
+        Instructor, Vancouver
+      </div>
+    </div>
+
 
   </div>
 
